--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,6 +1,6 @@
 // <import fonts> 
-	@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
-	@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700&family=Varta:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700&family=Varta:wght@100;200;300;400;500;600;700&display=swap');
 // </import fonts>
 
 
@@ -8,11 +8,41 @@
 
 // </mixins>
 
+//<variables>
+$minwidth: 320px;
+$mw: 1200;
+$md1: $mw+12;
+$md2: 991.98;
+$md3: 767.98;
+$md4: 479.98;
+//</variables>
+
+//media
+@media (max-width: $md1+px) {
+	.container {
+		max-width: 900px;
+	}
+}
+
+@media (max-width: $md2+px) {
+	.container {
+		max-width: 750px;
+	}
+}
+
+@media (max-width: $md3+px) {
+	.container {
+		max-width: none;
+		padding: 0 5px;
+	}
+}
 
 // <import files>
-	@import 'nullstyle.scss';
+@import 'mixins.scss';
 
-	@import 'header.scss';
+@import '_nullstyle.scss';
+
+@import '_header.scss';
 // </import files>
 
 h2 {
@@ -41,24 +71,34 @@ body {
 	justify-content: center;
 	align-items: center;
 	height: 90vh;
+	position: relative;
+
 	&__title {
-		font-size: 6rem;
+		@include adaptiv-font(80, 40);
 		font-family: Roboto;
 		font-weight: 900;
 	}
+
 	&__subtitle {
-		font-size: 3rem;
+		@include adaptiv-font(40, 20);
 		font-weight: 200;
 		font-style: italic;
 		color: #be3144;
 		font-weight: 200;
 	}
+
+	&__arrow {
+		position: absolute;
+		bottom: 50px;
+	}
 }
+
 .works {
 	padding: 30px 0px;
 	background: #45567d;
+
 	&__title {
-		font-size: 3rem;
+		@include adaptiv-font(40, 20);
 		text-align: center;
 		margin: 0px 0px 0px 0px;
 
@@ -66,12 +106,14 @@ body {
 			margin: 0 6px;
 		}
 	}
+
 	&__row {
 		display: flex;
 		justify-content: space-around;
 		flex-wrap: wrap;
 		margin: 0 auto;
 	}
+
 	&__item {
 		display: block;
 		max-width: 365px;
@@ -86,8 +128,9 @@ body {
 	}
 
 	&__photo {
-			max-width: 365px;
+		max-width: 365px;
 	}
+
 	&__name {
 		display: flex;
 		background-color: #303841;
@@ -95,7 +138,7 @@ body {
 		widows: 100%;
 		font-family: varta;
 		font-size: 2rem;
-		color: #fff!important;
+		color: #fff !important;
 		justify-content: center;
 		align-items: center;
 	}
@@ -128,6 +171,7 @@ body {
 
 		&:hover {
 			background-color: #be3144;
+
 			span {
 				padding: 0px 40px 0px 0px;
 			}
@@ -139,28 +183,33 @@ body {
 	color: #303841;
 	transition: color 0.3s ease-out;
 }
+
 .container {
-	max-width: 1210px;
+	max-width: $mw;
 	margin: 0 auto;
 }
 
 .end {
 	background-color: #303841;
-	padding-top: 200px;
+	padding-top: 100px;
+
 	&__title {
-		font-size: 5em;
+		@include adaptiv-font(80, 30);
 		text-align: center;
 	}
+
 	&__subtitle {
 		margin: 15px 0px 0px 0px;
-		font-size: 16px;
+		@include adaptiv-font(16, 13);
 		font-style: italic;
 		text-align: center;
 	}
+
 	&__icons {
 		display: flex;
 		justify-content: center;
 	}
+
 	&__link {
 		img {
 			margin: 40px 25px;
@@ -175,24 +224,46 @@ body {
 	}
 
 	hr {
-		border: #be3144 3px solid; 
+		border: #be3144 3px solid;
 	}
 
 	.footer {
 		margin-top: 20px;
 		text-align: right;
+		padding: 0px 0px 10px 0px;
 
 		&__info {
-			font-size: 20px;
+			@include adaptiv-font(20, 12);
 			margin: 0px 5px 0px 0px;
 		}
+
 		&__add {
 			margin: 5px 5px 0px 0px;
 
-			a{
+			a {
 				color: #fff;
 				text-decoration: underline;
 			}
+		}
+	}
+}
+
+@media (max-width:$md4+px) {
+	.end {
+		&__link {
+			img {
+				width: 30px;
+			}
+		}
+	}
+
+	.works {
+		&__photo {
+			max-width: 270px;
+		}
+
+		&__item {
+			max-width: 270px;
 		}
 	}
 }
