--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,308 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap");@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700&family=Varta:wght@100;200;300;400;500;600;700&display=swap");*{padding:0;margin:0;border:0}*,:after,:before{box-sizing:border-box}:active,:focus{outline:none}a:active,a:focus{outline:none}a,a:active,a:hover,a:visited{color:#000}aside,footer,header,nav{display:block}body,html{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%}button,input,textarea{font-family:inherit}input::-ms-clear{display:none}button{cursor:pointer}button::-moz-focus-inner{padding:0;border:0}a,a:visited{text-decoration:none}a:hover{text-decoration:none}ul li{list-style:none}img{vertical-align:top}h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:400}.header{border-bottom:#000 1px solid;position:fixed;width:100%;height:10vh;background-color:#be3144}.header__container{width:500px;margin:0 auto}.nav__list{display:flex;margin:0px auto;justify-content:space-around}.nav li{font-size:24px;line-height:10vh;padding-left:20px;padding-right:20px}.nav li a{color:#fff}.nav li:hover{background-color:#45567d}h2{font-family:Raleway}body{font-family:Varta,sans-serif;color:#fff}.main{flex:1 1 auto;padding:10vh 0px 0px 0px}.content{display:flex;flex-direction:column}.promo{background-image:linear-gradient(60deg,#3a3d40,#19181a);display:flex;flex-direction:column;justify-content:center;align-items:center;height:90vh}.promo__title{font-size:6rem;font-family:Roboto;font-weight:900}.promo__subtitle{font-size:3rem;font-weight:200;font-style:italic;color:#be3144;font-weight:200}.works{padding:30px 0px;background:#45567d}.works__title{font-size:3rem;text-align:center;margin:0px 0px 0px 0px}.works__title_cool{margin:0 6px}.works__row{display:flex;justify-content:space-around;flex-wrap:wrap;margin:0 auto}.works__item{display:block;max-width:365px;max-height:430px;margin:30px 0}.works__item:hover .code{color:orange}.works__photo{max-width:365px}.works__name{display:flex;background-color:#303841;height:65px;widows:100%;font-family:varta;font-size:2rem;color:#fff!important;justify-content:center;align-items:center}.works hr{margin:10px auto 30px auto;border-bottom:#fff 3px solid;border-radius:3px;width:55%}.works .works__link{display:block;margin:40px auto;width:150px;height:40px;background-color:#303841;text-align:center;color:#fff;font-size:20px;border-radius:3px;line-height:40px;transition-duration:0.3s}.works .works__link span{background:url("../img/icons/arrow.png") right no-repeat;padding:0px 32px 0px 0px;transition-duration:0.5s}.works .works__link:hover{background-color:#be3144}.works .works__link:hover span{padding:0px 40px 0px 0px}.code{color:#303841;transition:color 0.3s ease-out}.container{max-width:1210px;margin:0 auto}.end{background-color:#303841;padding-top:200px}.end__title{font-size:5em;text-align:center}.end__subtitle{margin:15px 0px 0px 0px;font-size:16px;font-style:italic;text-align:center}.end__icons{display:flex;justify-content:center}.end__link img{margin:40px 25px;margin-bottom:100px;width:50px;transition-duration:0.5s}.end__link img:hover{transform:scale(1.2)}.end hr{border:#be3144 3px solid}.end .footer{margin-top:20px;text-align:right}.end .footer__info{font-size:20px;margin:0px 5px 0px 0px}.end .footer__add{margin:5px 5px 0px 0px}.end .footer__add a{color:#fff;text-decoration:underline}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700&family=Varta:wght@100;200;300;400;500;600;700&display=swap");
+@media (max-width: 1212px) {
+  .container {
+    max-width: 900px; } }
+
+@media (max-width: 991.98px) {
+  .container {
+    max-width: 750px; } }
+
+@media (max-width: 767.98px) {
+  .container {
+    max-width: none;
+    padding: 0 5px; } }
+
+* {
+  padding: 0;
+  margin: 0;
+  border: 0; }
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+:focus,
+:active {
+  outline: none; }
+
+a:focus,
+a:active {
+  outline: none; }
+
+a:visited,
+a:active,
+a:hover,
+a {
+  color: #000; }
+
+nav,
+footer,
+header,
+aside {
+  display: block; }
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 100%;
+  line-height: 1;
+  font-size: 14px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; }
+
+input,
+button,
+textarea {
+  font-family: inherit; }
+
+input::-ms-clear {
+  display: none; }
+
+button {
+  cursor: pointer; }
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0; }
+
+a,
+a:visited {
+  text-decoration: none; }
+
+a:hover {
+  text-decoration: none; }
+
+ul li {
+  list-style: none; }
+
+img {
+  vertical-align: top; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: 400; }
+
+.header {
+  border-bottom: #000 1px solid;
+  position: fixed;
+  width: 100%;
+  height: 10vh;
+  background-color: #be3144;
+  padding: 0px 0px 0px 10px;
+  z-index: 10; }
+  .header__container {
+    max-width: 500px;
+    display: block;
+    margin: 0px auto; }
+
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around; }
+  .nav__list li {
+    line-height: 10vh;
+    font-size: calc(16px + 8 * ((100vw - 320px) / 880));
+    margin: 0px 30px 0px 0px; }
+    .nav__list li a {
+      color: #fff; }
+    .nav__list li:hover {
+      background-color: #45567d; }
+
+@media (max-width: 479.98px) {
+  .header .container {
+    margin: 0px auto; } }
+
+h2 {
+  font-family: Raleway; }
+
+body {
+  font-family: Varta, sans-serif;
+  color: #fff; }
+
+.main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 10vh 0px 0px 0px; }
+
+.content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+
+.promo {
+  background-image: linear-gradient(60deg, #3a3d40, #19181a);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 90vh;
+  position: relative; }
+  .promo__title {
+    font-size: calc(40px + 40 * ((100vw - 320px) / 880));
+    font-family: Roboto;
+    font-weight: 900; }
+  .promo__subtitle {
+    font-size: calc(20px + 20 * ((100vw - 320px) / 880));
+    font-weight: 200;
+    font-style: italic;
+    color: #be3144;
+    font-weight: 200; }
+  .promo__arrow {
+    position: absolute;
+    bottom: 50px; }
+
+.works {
+  padding: 30px 0px;
+  background: #45567d; }
+  .works__title {
+    font-size: calc(20px + 20 * ((100vw - 320px) / 880));
+    text-align: center;
+    margin: 0px 0px 0px 0px; }
+    .works__title_cool {
+      margin: 0 6px; }
+  .works__row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: 0 auto; }
+  .works__item {
+    display: block;
+    max-width: 365px;
+    max-height: 430px;
+    margin: 30px 0; }
+    .works__item:hover .code {
+      color: orange; }
+  .works__photo {
+    max-width: 365px; }
+  .works__name {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: #303841;
+    height: 65px;
+    widows: 100%;
+    font-family: varta;
+    font-size: 2rem;
+    color: #fff !important;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .works hr {
+    margin: 10px auto 30px auto;
+    border-bottom: #fff 3px solid;
+    border-radius: 3px;
+    width: 55%; }
+  .works .works__link {
+    display: block;
+    margin: 40px auto;
+    width: 150px;
+    height: 40px;
+    background-color: #303841;
+    text-align: center;
+    color: #fff;
+    font-size: 20px;
+    border-radius: 3px;
+    line-height: 40px;
+    -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s; }
+    .works .works__link span {
+      background: url("../img/icons/arrow.png") right no-repeat;
+      padding: 0px 32px 0px 0px;
+      -webkit-transition-duration: 0.5s;
+              transition-duration: 0.5s; }
+    .works .works__link:hover {
+      background-color: #be3144; }
+      .works .works__link:hover span {
+        padding: 0px 40px 0px 0px; }
+
+.code {
+  color: #303841;
+  -webkit-transition: color 0.3s ease-out;
+  transition: color 0.3s ease-out; }
+
+.container {
+  max-width: 1200;
+  margin: 0 auto; }
+
+.end {
+  background-color: #303841;
+  padding-top: 100px; }
+  .end__title {
+    font-size: calc(30px + 50 * ((100vw - 320px) / 880));
+    text-align: center; }
+  .end__subtitle {
+    margin: 15px 0px 0px 0px;
+    font-size: calc(13px + 3 * ((100vw - 320px) / 880));
+    font-style: italic;
+    text-align: center; }
+  .end__icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .end__link img {
+    margin: 40px 25px;
+    margin-bottom: 100px;
+    width: 50px;
+    -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s; }
+    .end__link img:hover {
+      -webkit-transform: scale(1.2);
+              transform: scale(1.2); }
+  .end hr {
+    border: #be3144 3px solid; }
+  .end .footer {
+    margin-top: 20px;
+    text-align: right;
+    padding: 0px 0px 10px 0px; }
+    .end .footer__info {
+      font-size: calc(12px + 8 * ((100vw - 320px) / 880));
+      margin: 0px 5px 0px 0px; }
+    .end .footer__add {
+      margin: 5px 5px 0px 0px; }
+      .end .footer__add a {
+        color: #fff;
+        text-decoration: underline; }
+
+@media (max-width: 479.98px) {
+  .end__link img {
+    width: 30px; }
+  .works__photo {
+    max-width: 270px; }
+  .works__item {
+    max-width: 270px; } }
